<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/idMenuHamburguer"
        android:title=""
        android:icon="@drawable/ic_baseline_menu_24"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/idMenuCompanyDetails"
                android:title="Company Details"
                android:icon="@drawable/ic_baseline_warehouse_24"/>
            <item
                android:id="@+id/idMenuUsers"
                android:title="Users"
                android:icon="@drawable/ic_baseline_manage_accounts_24"/>
            <item
                android:id="@+id/idMenuProducts"
                android:title="Products"
                android:icon="@drawable/_725534_box_icon"/>
            <item
...
